--- a/firmware_mod/www/index.html
+++ b/firmware_mod/www/index.html
@@ -147,7 +147,20 @@
         #content:hover #dpad_indicator {
             display: none;
         }
-
+        .double {
+          zoom: 2;
+          transform: scale(1.5);
+          -ms-transform: scale(1.5);
+          -webkit-transform: scale(1.5);
+          -o-transform: scale(1.5);
+          -moz-transform: scale(1.5);
+          transform-origin: 0 0;
+          -ms-transform-origin: 0 0;
+          -webkit-transform-origin: 0 0;
+          -o-transform-origin: 0 0;
+          -moz-transform-origin: 0 0;
+          -webkit-transform-origin: 0 0;
+        }
     </style>
 </head>
 
